test/corpus/commands.txt
====
Type
====

Type "Whatever you want"

---

(program
 (command (type (string))))

====
Non-alphanumeric character except white space
====

Ctrl+[
Ctrl+@
Ctrl+^
Ctrl+]
Ctrl+\
Ctrl+-
Alt+[
Alt+@
Alt+^
Alt+]
Alt+\
Alt+-
Shift+[
Shift+@
Shift+^
Shift+]
Shift+\
Shift+-

---

(program
 (command (control))
 (command (control))
 (command (control))
 (command (control))
 (command (control))
 (command (control))
 (command (alt))
 (command (alt))
 (command (alt))
 (command (alt))
 (command (alt))
 (command (alt))
 (command (shift))
 (command (shift))
 (command (shift))
 (command (shift))
 (command (shift))
 (command (shift)))

====
Case sensitive on Ctrl/Alt/Shift
====

Ctrl+A
Ctrl+a
Alt+B
Alt+b
Shift+C
Shift+c

---

(program
 (command (control))
 (command (control))
 (command (alt))
 (command (alt))
 (command (shift))
 (command (shift)))

=====
Sleep
=====

Sleep 2s
Sleep 500ms
Sleep 2000

---

(program
 (command (sleep (time)))
 (command (sleep (time)))
 (command (sleep (time))))

======
Output
======

Output ./examples/frames/frame-%05d.png
Output ./examples/out.gif
Output ./examples/out.mp4
Output ./examples/out.webm

---

(program
 (command (output (path)))
 (command (output (path)))
 (command (output (path)))
 (command (output (path))))

==========
Screenshot
==========

Screenshot screenshot.png
Screenshot 1.png
Screenshot examples/hello_world.png

---

(program
 (command (screenshot (path)))
 (command (screenshot (path)))
 (command (screenshot (path))))


============
Source
============
Source "foo.tape"

---

(program
  (command
    (source
      (string))))
